--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "dependencies": {
     "@prisma/client": "^5.18.0",
+    "axios": "^1.7.4",
+    "bcrypt": "^5.1.1",
     "express": "^4.19.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
