--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@prisma/client": "^5.18.0",
     "@supabase/supabase-js": "^2.45.3",
     "axios": "^1.7.4",
+    "base64-arraybuffer": "^1.0.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
