--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "base64-arraybuffer": "^1.0.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "expo-constants": "^16.0.2",
+    "expo-device": "^6.0.2",
+    "expo-notifications": "^0.28.19",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.14",
