--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-notifications": "^0.28.19",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.9.14",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
