--- a/package.json
+++ b/package.json
@@ -22,14 +22,18 @@
     "base64-arraybuffer": "^1.0.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "exceljs": "^4.4.0",
     "expo-constants": "^16.0.2",
     "expo-device": "^6.0.2",
     "expo-notifications": "^0.28.19",
     "express": "^4.19.2",
+    "geolib": "^3.3.4",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.14",
+    "resend": "^4.0.1",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "xlsx": "^0.18.5"
   }
 }
